First working Version with all basic Features
